# ring

./: .env.test  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  castor.php  config.toml  docker-compose.yaml  example.json  mkdocs.yml  ring.yaml
.github/workflows/: ci.yml  deploy-website.yml  docs.yml  release.yml  rust.yaml
crates/ring-agent/: Cargo.toml
crates/ring-agent/src/: main.rs
dashboard/: .gitignore  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.d.ts  app.html
dashboard/src/lib/: CopyButton.svelte  api.ts  auth.ts  theme.ts  utils.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
doc/: api-reference.md  cloud-hypervisor.md  examples.md  faq.md  index.md  installation.md  reference.md
doc/getting-started/: first-deployment.md  managing-deployments.md
documentation/: cloud-hypervisor.md  examples.md  faq.md  index.md  installation.md
documentation/concepts/: architecture.md  deployment-status-lifecycle.md  health-checks-design.md  namespaces-and-networking.md  reconciliation.md  runtimes.md  secrets-encryption.md  why-not-kubernetes.md
documentation/getting-started/: first-deployment.md  index.md  installation.md  managing-deployments.md  overview.md
documentation/guides/: examples.md  health-checks.md  jobs-and-workers.md  networking.md  observability.md  rolling-updates.md  secrets.md
documentation/help/: faq.md  observe-and-debug.md  troubleshooting.md
documentation/how-to/: authenticate-scripts-with-tokens.md  configure-health-checks.md  deploy-on-cloud-hypervisor.md  deploy-with-secrets.md  expose-http-traffic.md  expose-with-sozune.md  isolate-namespaces-network.md  manage-users.md  observe-and-debug.md  perform-rolling-update.md  run-a-job.md  run-as-service.md  subscribe-to-events-with-webhooks.md  use-host-network.md  use-the-dashboard.md
documentation/reference/: api.md  cli.md  config-toml.md  environment-variables.md  manifest.md
documentation/runtimes/: cloud-hypervisor.md  containerd.md  docker.md  firecracker.md  index.md  podman.md
documentation/tutorials/: first-deployment.md  install-and-run.md
examples/: cloud-hypervisor.yaml  imagepull_auth.json  nginx.yaml
migrations/: 20220101000001_initial.sql  20220101000002_restart.sql  20220101000003_config.sql  20220101000005_deployment_events.sql  20220101000006_health_checks.sql  20220101000007_unique_deployment_namespace_name.sql  20220101000009_image_digest.sql  20220101000010_namespaces.sql  20220101000011_secrets.sql  20220101000012_rename_secrets_to_environment.sql  20220101000013_parent_id.sql  20220101000014_network_mode.sql  20220101000015_snake_case_deployment_status.sql  20220101000016_user_role.sql  20220101000017_audit_log.sql  20220101000018_scoped_api_tokens.sql  20220101000018_volumes.sql  20220101000019_events_queue.sql  20220101000020_webhooks.sql  20220101000022_drop_user_token.sql
scripts/: migrate_refinery_to_sqlx.sql  release.sh
src/: database.rs  exit_code.rs  main.rs  serializer.rs  webhook.rs
src/api/: auth.rs  mod.rs  server.rs  stream_tickets.rs  validation.rs
src/api/action/: healthz.rs  login.rs  logout.rs  metrics.rs  mod.rs  stream_ticket.rs
src/api/dto/: audit.rs  config.rs  deployment.rs  mod.rs  namespace.rs  node.rs  stats.rs  user.rs
src/cli/: mod.rs  output.rs  problem_json.rs  style.rs
src/commands/: apply.rs  config.rs  context.rs  dashboard.rs  deployments.rs  doctor.rs  init.rs  login.rs  logout.rs  mod.rs  problem_json.rs  server.rs  style.rs
src/commands/config/: delete.rs  inspect.rs  list.rs  mod.rs
src/commands/deployment/: delete.rs  events.rs  health_checks.rs  inspect.rs  list.rs  logs.rs  metrics.rs  mod.rs
src/commands/namespace/: audit.rs  create.rs  delete.rs  list.rs  mod.rs  prune.rs
src/commands/node/: get.rs
src/commands/secret/: create.rs  delete.rs  list.rs  mod.rs
src/commands/token/: create.rs  list.rs  mod.rs  revoke.rs  rotate.rs
src/commands/user/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/commands/webhook/: create.rs  delete.rs  inspect.rs  list.rs  mod.rs
src/config/: api.rs  auth.rs  config.rs  mod.rs  server.rs  user.rs
src/dashboard/: mod.rs  proxy.rs  server.rs
src/events/: mod.rs
src/fixtures/: configs.rs  deployments.rs  events.rs  mod.rs  users.rs
src/hypervisor/: classifier.rs  cloud_init.rs  console_logs.rs  error.rs  health_probes.rs  host_nat.rs  lifecycle_trait.rs  mock.rs  mod.rs  port_forwarder.rs  resources.rs  stats.rs  tap.rs  types.rs  virtiofs.rs  volume_image.rs  vsock_client.rs
src/migrations/: 00.init.sql  V1__initial.sql  V2__logs.sql  V2__restart.sql  V3__config.sql  V4__command.sql  V5__deployment_events.sql  V6__blue_green_deployment.sql  V6__health_checks.sql  V7__unique_deployment_namespace_name.sql  V8__resource_limits.sql
src/models/: audit_log.rs  config.rs  deployment_event.rs  deployments.rs  event_queue.rs  health_check.rs  health_check_logs.rs  mod.rs  namespace.rs  pods.rs  query.rs  secret.rs  token.rs  users.rs  volume.rs  volumes.rs  webhook.rs
src/runtime/: cloud_init.rs  docker.rs  error.rs  host_net.rs  lifecycle_trait.rs  mock.rs  mod.rs  port_forwarder.rs  registry_auth.rs  resources.rs  runtime.rs  tap.rs  virtiofs.rs
src/runtime/cloud_hypervisor/: client.rs  cloud_init.rs  console_logs.rs  image.rs  lifecycle.rs  mod.rs  network.rs  runtime_impl.rs  stats.rs
src/runtime/containerd/: client.rs  cni.rs  health_check.rs  image.rs  instances.rs  lifecycle.rs  logs.rs  mod.rs  oci.rs  stats.rs
src/scheduler/: backoff.rs  docker_events.rs  event_worker.rs  health_checker.rs  healthy_window.rs  intentional_shutdowns.rs  liveness_grace.rs  mod.rs  scheduler.rs  stats_cache.rs
src/utils/: labels.rs  mod.rs
tests/e2e/: lib.sh  run.sh  setup-ch.sh  t10_ch_volumes.sh  t11_ch_ports.sh  t1_ch_boot_delete.sh  t1_create_delete.sh  t4_rolling_update.sh  t5_ch_replicas.sh  t5_replicas.sh  t6_crashloop.sh  t7_scaledown_no_falsepositive.sh  t9_ch_environment.sh
website/: .gitignore  aplos.config.js  package.json
website/scripts/: generate-seo.js
website/src/lib/: docs.ts  (+1 more)
(+232 files in other folders)
