[package]
name = "ring-server"
version = "0.1.0"
authors = ["Nawo Mbechezi mlanawo@mbechezi.kemeter.io"]
edition = "2021"

[[bin]]
name = "ring"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "1.38", features = ["full"] }
log = "0.4.0"
env_logger = "0.11.2"
shiplift = { git = "https://github.com/softprops/shiplift" }
yaml-rust = "0.4"
clap = "4.5.1"
clokwerk = "0.4.0"
chrono = "0.4"
uuid = { version = "1.4.1", features = ["v4"] }
serde_rusqlite = "0.35.0"
rusqlite = { version = "0.31.0", features = [ ] }
ureq = { version = "2.3.0", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.1"
local-ip-address = "0.6.1"
cli-table = "0.4"
axum = { version = "0.7.4" }
axum-extra = { version = "0.9.2", features = ["typed-header", "query", "json-deserializer"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = ["add-extension", "trace"] }
axum-macros = "0.4.1"
rust-argon2 = "2.0.0"
refinery = { version = "0.8", features = [ "rusqlite-bundled" ] }
regex = "1.6.0"
serde_yaml = "0.9.25"
tempdir = "0.3.7"
http = "1.0.0"
mime = "0.3.17"
url = "2.5.0"
async-trait = "0.1.77"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
axum-debug = "0.3.3"
axum-test = "15.3.0"
