[package]
name = "ring-server"
version = "0.2.0"
authors = ["Nawo Mbechezi mlanawo@mbechezi.kemeter.io"]
edition = "2021"

[[bin]]
name = "ring"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "1.20", features = ["full"] }
log = "0.4.0"
env_logger = "0.11.2"
bollard = "0.19.0"
clap = "4.5.1"
chrono = "0.4"
uuid = { version = "1.4.1", features = ["v4"] }
serde_rusqlite = "0.35.0"
rusqlite = { version = "0.31.0", features = [ ] }
ureq = { version = "3.0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.1"
local-ip-address = "0.6.1"
cli-table = "0.5.0"
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["typed-header", "query", "json-deserializer"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
axum-macros = "0.5.0"
rust-argon2 = "2.0.0"
refinery = { version = "0.8", features = [ "rusqlite-bundled" ] }
regex = "1.6.0"
serde_yaml = "0.9.25"
http = "1.0.0"
url = "2.5.0"
async-trait = "0.1.77"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.1"
once_cell = "1.21.3"

sysinfo = "0.35.1"
[dev-dependencies]
axum-test = "17.3.0"
