[workspace]
members = ["crates/ring-agent"]

[package]
name = "ring-server"
version = "0.10.0-dev"
authors = ["Mlanawo Mbechezi mlanawo@mbechezi.kemeter.io"]
edition = "2024"
license = "MIT"

[[bin]]
name = "ring"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "1.20", features = ["full"] }
bollard = "0.20.2"
clap = { version = "4.5.1", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.4.1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.1"
local-ip-address = "0.6.1"
cli-table = "0.5.0"
owo-colors = { version = "4", features = ["supports-colors"] }
axum = { version = "0.8.4" }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors"] }
axum-macros = "0.5.0"
rust-argon2 = "2.0.0"
regex = "1.6.0"
serde_yaml = "0.9.25"
http = "1.0.0"
url = "2.5.0"
async-trait = "0.1.77"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.1"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
once_cell = "1.21.3"
shell-words = "1.1"
inquire = "0.7"

sysinfo = "0.35.1"
# Used by the Firecracker runtime to create/configure the host TAP device via
# syscalls (ioctl TUNSETIFF + socket ioctls). Direct ioctls are required
# because shelling out to `ip` loses CAP_NET_ADMIN across the fork-exec.
libc = "0.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio-vsock = "0.7"
rust-embed = "8"
mime_guess = "2"
anyhow = "1"
caps = "0.5.6"
nix = { version = "0.31.3", features = ["signal"] }
# containerd runtime: native gRPC over containerd's Unix socket. We drive the
# raw containerd API (images, content, snapshots, containers, tasks) rather
# than going through Docker — there is no daemon in between. `containerd-client`
# carries the official prost/tonic bindings for that API generated from
# containerd's own .proto, and its `connect` helper dials the Unix socket.
# tonic/prost/prost-types are pinned to the same versions it uses so the
# generated types and our hand-written code agree on one set of crates.
containerd-client = "0.9"
# Kept on the same tonic/prost majors that containerd-client 0.9 uses, so the
# generated containerd types and our hand-written gRPC code share one copy of
# each crate (a second copy would stop the Request/message types unifying and
# every round-trip would fail to typecheck).
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"
docker_credential = "1.4.0"

[dev-dependencies]
axum-test = "17.3.0"
