[package]
name = "ring-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ring-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "macros", "io-util", "process", "time"] }
tokio-vsock = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
